--- a/public/admin.html
+++ b/public/admin.html
@@ -6,19 +6,18 @@
 <title>Panel Insomnia Admin</title>
 <style>
   :root{
-    --bg1:#4b0082;           /* violeta brillante */
-    --bg2:#000000;           /* negro */
-    --particle:#c7b3ff;      /* partículas claras */
-    --card:#1c1433f0;        /* tarjeta violeta translúcida */
+    --bg1:#4b0082;
+    --bg2:#000000;
+    --particle:#c7b3ff;
+    --card:#1c1433f0;
     --edge1:rgba(174,143,255,.16);
     --edge2:rgba(255,255,255,.55);
     --text:#ffffff;
     --muted:#c9c0f2;
-
-    --btn-bg:#1e1935;        /* fondo del botón (oscuro) */
-    --neonA:#b985ff;         /* neón violeta */
-    --neonB:#efe6ff;         /* destello muy claro */
-    --pulse:#7f5cff;         /* pulso violeta suave */
+    --btn-bg:#1e1935;
+    --neonA:#b985ff;
+    --neonB:#efe6ff;
+    --pulse:#7f5cff;
   }
 
   html,body{
@@ -27,28 +26,22 @@
     color:var(--text);
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
     background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));
-    overflow:auto; /* scroll en celu si la lista crece */
+    overflow:auto;
   }
 
-  /* Fondo animado (partículas) */
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
 
-  /* Contenedor principal */
   .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
 
-  /* Logo superpuesto (la tarjeta lo pisa más) */
   .logo-wrap{display:flex;justify-content:center;position:relative;z-index:2}
   .logo{
     width:240px;display:block;
     filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));
-    margin:10px auto -36px; /* MÁS superposición */
+    margin:10px auto -36px;
   }
 
-  /* Tarjeta */
   .card{
-    position:relative;
-    z-index:1; /* debajo del logo para el efecto */
-    margin:0 auto;
+    position:relative;z-index:1;margin:0 auto;
     background:
       linear-gradient(var(--card),var(--card)) padding-box,
       linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
@@ -57,12 +50,10 @@
   }
   .card-inner{padding:16px 14px}
 
-  /* Textos */
   h1{margin:2px 0 8px;text-align:center;font-size:24px;letter-spacing:.4px}
   p,small{color:var(--muted);text-align:center;margin:0}
   .subtitle{margin:4px 0 10px}
 
-  /* Fila de token */
   .row{display:flex;gap:8px;margin:8px 0}
   input[type=text]{
     flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
@@ -70,7 +61,6 @@
   }
   input::placeholder{color:#9a8ccc}
 
-  /* ===== Botones base ===== */
   .btn{
     position:relative;border:none;border-radius:12px;
     padding:10px 12px;color:#fff;cursor:pointer;outline:none;
@@ -78,62 +68,55 @@
     white-space:nowrap;font-weight:600;letter-spacing:.2px;
     text-align:center;
     box-shadow:0 6px 18px rgba(40,0,120,.22);
-    z-index:0; /* crea contexto para pseudo-elementos */
+    z-index:0;
   }
   .btn:hover{filter:brightness(1.08)}
   .btn > *{position:relative;z-index:2}
 
-  /* ARO (estático) — máscara para ver solo el borde */
   .btn::before{
     content:""; position:absolute; inset:0; border-radius:12px; z-index:1;
     background:transparent;
   }
 
-  /* Aro fino y delicado (sin animación) */
   .btn--thin{ box-shadow:0 6px 16px rgba(40,0,120,.18); }
   .btn--thin::before{
     inset:-1px; border-radius:13px;
     background:conic-gradient(from 45deg, var(--neonA) 0%, var(--neonB) 18%, var(--neonA) 36%, var(--neonA) 100%);
     -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
     -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:1px; /* ARO FINO */
+    padding:1px;
     filter:saturate(90%) blur(.15px) opacity(.85);
   }
 
-  /* Aro más grueso/brillante (sin animación) para AGREGAR CAJERA */
   .btn--bold{ box-shadow:0 8px 26px rgba(100,50,180,.32); }
   .btn--bold::before{
     inset:-2px; border-radius:14px;
     background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
     -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
     -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:2px; /* ARO MÁS GRUESO */
+    padding:2px;
     filter:saturate(120%) blur(.35px) opacity(.95);
   }
 
-  /* Tamaño compacto para que entren en una línea en celu */
-  .btn--sm{ padding:7px 9px; font-size:12px; min-width:108px }  /* más chico */
-  /* Ajuste específico para "Resetear rotación" aún más chico */
+  .btn--sm{ padding:7px 9px; font-size:12px; min-width:108px }
   #btnRot.btn--sm{ min-width:102px; font-size:11.8px; padding:7px 8px }
 
-  /* Disposición de acciones */
   .actions-top{
     display:flex; gap:6px; margin:8px 0 6px;
     justify-content:space-between; flex-wrap:nowrap;
   }
   .actions-bottom{
     display:flex; justify-content:center;
-    margin:18px 0 6px;   /* MÁS separación para destacar */
+    margin:18px 0 6px;
     position:relative;
   }
 
-  /* AGREGAR CAJERA más grande + pulso detrás del botón */
   .btn--main{
     font-size:15px; padding:12px 16px; min-width:220px;
     box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
   }
   .btn--main::after{
-    content:""; position:absolute; z-index:0; /* detrás del contenido, encima del fondo del botón */
+    content:""; position:absolute; z-index:0;
     inset:-16px; border-radius:28px;
     background: radial-gradient(45% 70% at 50% 50%,
       rgba(127,92,255,.55),
@@ -147,14 +130,17 @@
     50%    { transform:scale(1.06); opacity:1;   }
   }
 
-  /* Ítems de lista y mensajes */
   .item{display:flex;gap:8px;margin:6px 0}
   .item .btn{min-width:auto;padding:10px 12px}
   #msg.ok{color:#90f0b0} #msg.err{color:#fca5a5}
 
-  /* Responsive */
+  /* 🔽 LISTA DE CAJERAS MÁS ABAJO */
+  #list {
+    margin-top: 30px;
+  }
+
   @media (max-width:420px){
-    .logo{width:216px;margin:8px auto -38px}  /* aún más superpuesta en mobile */
+    .logo{width:216px;margin:8px auto -38px}
     .card-inner{padding:14px 10px}
     .btn{font-size:12.5px}
     .btn--sm{min-width:106px;padding:7px 8px}
@@ -176,20 +162,17 @@
       <h1>Panel Admin</h1>
       <p class="subtitle">Gestioná tus enlaces wa.me con rotación automática (2 clics por número).</p>
 
-      <!-- Token (Guardar token con aro fino) -->
       <div class="row">
         <input id="token" type="text" placeholder="tok99-2025">
         <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
       </div>
 
-      <!-- Fila superior: Actualizar | Borrar | Resetear (aros finos y compactos) -->
       <div class="actions-top">
         <button class="btn btn--thin btn--sm" id="btnUpdate">Actualizar lista</button>
         <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
         <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
       </div>
 
-      <!-- Fila inferior: AGREGAR CAJERA (más grande + pulso violeta suave) -->
       <div class="actions-bottom">
         <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
       </div>
@@ -201,7 +184,6 @@
 </div>
 
 <script>
-/* ===== Partículas estilo original ===== */
 const c=document.getElementById("bg"),x=c.getContext("2d");
 let P=[];
 function rs(){c.width=innerWidth;c.height=innerHeight}
@@ -226,36 +208,28 @@ for(let i=0;i<90;i++)P.push({
   requestAnimationFrame(anim);
 })();
 
-/* ===== Lógica del panel ===== */
 const $=s=>document.querySelector(s);
 const list=$("#list"),msg=$("#msg"),tokenInput=$("#token");
 
-/* Crear fila */
 function row(v=""){
   const d=document.createElement("div");d.className="item";
   const i=document.createElement("input");i.type="text";i.placeholder="https://wa.me/...";i.value=v;
   const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";
   b.onclick=()=>d.remove();
   d.append(i,b);list.append(d);
-
-  // Scroll suave al nuevo campo (para celu)
   setTimeout(()=>{ i.scrollIntoView({behavior:"smooth", block:"end"}); i.focus(); }, 50);
 }
 
-/* Obtener valores / mensajes */
 function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim()).filter(Boolean)}
 function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
 
-/* Guardar token local */
 $("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
 
-/* Cargar lista si ya hay token guardado */
 window.onload=async()=>{
   const t=localStorage.getItem("adm_tok");
   if(t){ tokenInput.value=t; await loadList(t); }
 };
 
-/* GET lista */
 async function loadList(t){
   try{
     show("Cargando...");
@@ -268,10 +242,8 @@ async function loadList(t){
   }catch(e){ show("Error al cargar",0); }
 }
 
-/* Agregar cajera */
 $("#btnAdd").onclick=()=>row("");
 
-/* Actualizar lista (POST y luego refresco) */
 $("#btnUpdate").onclick=async()=>{
   const t=tokenInput.value.trim();
   if(!t)return show("Poné token",0);
@@ -288,7 +260,6 @@ $("#btnUpdate").onclick=async()=>{
   }catch(e){ show("Error al guardar",0); }
 };
 
-/* Borrar lista (reset=1) */
 $("#btnReset").onclick=async()=>{
   const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
   try{
@@ -299,7 +270,6 @@ $("#btnReset").onclick=async()=>{
   }catch(e){ show("Error",0); }
 };
 
-/* Resetear rotación */
 $("#btnRot").onclick=async()=>{
   const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
   try{
