--- a/public/admin.html
+++ b/public/admin.html
@@ -5,278 +5,135 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Panel Insomnia Admin</title>
 <style>
-  :root{
-    --bg1:#4b0082;
-    --bg2:#000000;
-    --particle:#c7b3ff;
-    --card:#1c1433f0;
-    --edge1:rgba(174,143,255,.16);
-    --edge2:rgba(255,255,255,.55);
-    --text:#ffffff;
-    --muted:#c9c0f2;
-    --btn-bg:#1e1935;
-    --neonA:#b985ff;
-    --neonB:#efe6ff;
-    --pulse:#7f5cff;
-  }
-
-  html,body{
-    height:100%;
-    margin:0;
-    color:var(--text);
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;
-    background: radial-gradient(circle at 30% -10%, var(--bg1), var(--bg2));
-    overflow:auto;
-  }
-
-  canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
-
-  .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
-
-  .logo-wrap{display:flex;justify-content:center;position:relative;z-index:2}
-  .logo{
-    width:240px;display:block;
-    filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));
-    margin:10px auto -36px;
-  }
-
-  .card{
-    position:relative;z-index:1;margin:0 auto;
-    background:
-      linear-gradient(var(--card),var(--card)) padding-box,
-      linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
-  .card-inner{padding:16px 14px}
-
-  h1{margin:2px 0 8px;text-align:center;font-size:24px;letter-spacing:.4px}
-  p,small{color:var(--muted);text-align:center;margin:0}
-  .subtitle{margin:4px 0 10px}
-
-  .row{display:flex;gap:8px;margin:8px 0}
-  input[type=text]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none
-  }
+  html,body{height:100%;margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;background:#1b142c;overflow:hidden;color:#fff;}
+  canvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:0;}
+  .wrap{position:relative;z-index:2;max-width:720px;margin:20px auto;background:rgba(25,18,45,0.85);
+    backdrop-filter:blur(8px);border:1px solid rgba(125,90,255,.3);border-radius:20px;padding:24px;
+    box-shadow:0 10px 40px rgba(0,0,0,.4);}
+  h1{text-align:center;color:#fff;font-size:28px;letter-spacing:1px;margin:0 0 15px;}
+  img.logo{display:block;margin:-20px auto -10px auto;width:180px;filter:drop-shadow(0 0 6px rgba(255,255,255,.25));}
+  p,small{color:#c7bdf0;text-align:center}
+  .row{display:flex;gap:8px;margin:10px 0}
+  input[type=text]{flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.4);
+    border-radius:10px;padding:10px;color:#fff;outline:none}
   input::placeholder{color:#9a8ccc}
-
-  .btn{
-    position:relative;border:none;border-radius:12px;
-    padding:10px 12px;color:#fff;cursor:pointer;outline:none;
-    background:var(--btn-bg);
-    white-space:nowrap;font-weight:600;letter-spacing:.2px;
-    text-align:center;
-    box-shadow:0 6px 18px rgba(40,0,120,.22);
-    z-index:0;
-  }
-  .btn:hover{filter:brightness(1.08)}
-  .btn > *{position:relative;z-index:2}
-
-  .btn::before{
-    content:""; position:absolute; inset:0; border-radius:12px; z-index:1;
-    background:transparent;
-  }
-
-  .btn--thin{ box-shadow:0 6px 16px rgba(40,0,120,.18); }
-  .btn--thin::before{
-    inset:-1px; border-radius:13px;
-    background:conic-gradient(from 45deg, var(--neonA) 0%, var(--neonB) 18%, var(--neonA) 36%, var(--neonA) 100%);
-    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:1px;
-    filter:saturate(90%) blur(.15px) opacity(.85);
-  }
-
-  .btn--bold{ box-shadow:0 8px 26px rgba(100,50,180,.32); }
-  .btn--bold::before{
-    inset:-2px; border-radius:14px;
-    background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
-    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:2px;
-    filter:saturate(120%) blur(.35px) opacity(.95);
-  }
-
-  .btn--sm{ padding:7px 9px; font-size:12px; min-width:108px }
-  #btnRot.btn--sm{ min-width:102px; font-size:11.8px; padding:7px 8px }
-
-  .actions-top{
-    display:flex; gap:6px; margin:8px 0 6px;
-    justify-content:space-between; flex-wrap:nowrap;
-  }
-  .actions-bottom{
-    display:flex; justify-content:center;
-    margin:18px 0 6px;
-    position:relative;
-  }
-
-  .btn--main{
-    font-size:15px; padding:12px 16px; min-width:220px;
-    box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
-  }
-  .btn--main::after{
-    content:""; position:absolute; z-index:0;
-    inset:-16px; border-radius:28px;
-    background: radial-gradient(45% 70% at 50% 50%,
-      rgba(127,92,255,.55),
-      rgba(127,92,255,.22) 55%,
-      transparent 75%);
-    filter:blur(16px);
-    animation:breath 2.8s ease-in-out infinite;
-  }
-  @keyframes breath{
-    0%,100%{ transform:scale(0.96); opacity:.85; }
-    50%    { transform:scale(1.06); opacity:1;   }
-  }
-
-  .item{display:flex;gap:8px;margin:6px 0}
-  .item .btn{min-width:auto;padding:10px 12px}
-  #msg.ok{color:#90f0b0} #msg.err{color:#fca5a5}
-
-  /* 🔽 LISTA DE CAJERAS MÁS ABAJO */
-  #list {
-    margin-top: 30px;
-  }
-
-  @media (max-width:420px){
-    .logo{width:216px;margin:8px auto -38px}
-    .card-inner{padding:14px 10px}
-    .btn{font-size:12.5px}
-    .btn--sm{min-width:106px;padding:7px 8px}
-    #btnRot.btn--sm{min-width:100px;font-size:11.6px;padding:7px 7px}
-    .btn--main{min-width:210px}
-  }
+  button{background:#2a1e58;border:none;padding:10px 14px;border-radius:10px;color:#fff;cursor:pointer;transition:.3s}
+  button:hover{filter:brightness(1.2)}
+  .small-bar{display:flex;flex-wrap:wrap;gap:8px;justify-content:center;margin-top:10px}
+  .small-bar button{flex:1;min-width:100px;font-size:14px;padding:8px 10px;border:1px solid rgba(180,140,255,.4);}
+  #btnAdd{display:block;margin:18px auto;padding:14px 24px;background:#6d4bff;border-radius:12px;
+    font-weight:600;font-size:16px;box-shadow:0 0 15px 4px rgba(109,75,255,.3);position:relative;animation:pulse 2.5s infinite;}
+  @keyframes pulse{0%{box-shadow:0 0 10px 2px rgba(109,75,255,.3);}50%{box-shadow:0 0 22px 6px rgba(109,75,255,.6);}100%{box-shadow:0 0 10px 2px rgba(109,75,255,.3);}}
+  #btnSave{display:block;margin:18px auto;padding:14px 24px;background:#865dff;border-radius:12px;
+    font-weight:600;font-size:16px;width:70%;box-shadow:0 0 15px 3px rgba(134,93,255,.3);}
+  .item{display:flex;gap:8px;margin:8px 0}
+  .item button{background:#512bbf;border:1px solid rgba(180,140,255,.4)}
+  .ok{color:#90f0b0;text-align:center;margin-top:10px}
+  .err{color:#fca5a5;text-align:center;margin-top:10px}
 </style>
 </head>
 <body>
 <canvas id="bg"></canvas>
+<div class="wrap">
+  <img src="/insomnia-logo.png" class="logo" alt="Insomnia Logo">
+  <h1>Panel Admin</h1>
 
-<div class="shell">
-  <div class="logo-wrap">
-    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
+  <div class="row">
+    <input id="token" type="text" placeholder="tok99-2025">
+    <button id="btnSaveToken">Guardar token</button>
   </div>
 
-  <div class="card">
-    <div class="card-inner">
-      <h1>Panel Admin</h1>
-      <p class="subtitle">Gestioná tus enlaces wa.me con rotación automática (2 clics por número).</p>
-
-      <div class="row">
-        <input id="token" type="text" placeholder="tok99-2025">
-        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
-      </div>
-
-      <div class="actions-top">
-        <button class="btn btn--thin btn--sm" id="btnUpdate">Actualizar lista</button>
-        <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
-        <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
-      </div>
-
-      <div class="actions-bottom">
-        <button class="btn btn--bold btn--main" id="btnAdd">AGREGAR CAJERA</button>
-      </div>
-
-      <div id="list"></div>
-      <p id="msg"></p>
-    </div>
+  <div class="small-bar">
+    <button id="btnView">Ver lista</button>
+    <button id="btnReset">Borrar lista</button>
+    <button id="btnRot">Resetear rotación</button>
   </div>
+
+  <button id="btnAdd">AGREGAR CAJERA</button>
+
+  <div id="list"></div>
+  <button id="btnSave">GUARDAR</button>
+
+  <p id="msg"></p>
 </div>
 
 <script>
+// === fondo partículas ===
 const c=document.getElementById("bg"),x=c.getContext("2d");
-let P=[];
-function rs(){c.width=innerWidth;c.height=innerHeight}
-addEventListener("resize",rs);rs();
-for(let i=0;i<90;i++)P.push({
-  x:Math.random()*c.width,y:Math.random()*c.height,
-  vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,
-  r:Math.random()*2+.7
-});
-(function anim(){
-  const grad=x.createRadialGradient(c.width*0.3, c.height*0.1, 0, c.width*0.3, c.height*0.1, Math.max(c.width,c.height));
-  grad.addColorStop(0, getComputedStyle(document.documentElement).getPropertyValue('--bg1').trim());
-  grad.addColorStop(1, getComputedStyle(document.documentElement).getPropertyValue('--bg2').trim());
-  x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);
-  x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle').trim();
-  for(const p of P){
-    p.x+=p.vx;p.y+=p.vy;
-    if(p.x<0||p.x>c.width)p.vx*=-1;
-    if(p.y<0||p.y>c.height)p.vy*=-1;
-    x.beginPath();x.arc(p.x,p.y,p.r,0,6.283);x.fill();
-  }
+let p=[];
+function resize(){c.width=innerWidth;c.height=innerHeight}
+addEventListener("resize",resize);resize();
+for(let i=0;i<80;i++)p.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.3,vy:(Math.random()-.5)*.3,r:Math.random()*2+0.5});
+function anim(){
+  x.fillStyle="#1b142c";x.fillRect(0,0,c.width,c.height);
+  x.fillStyle="#a68bff";
+  for(const o of p){o.x+=o.vx;o.y+=o.vy;
+    if(o.x<0||o.x>c.width)o.vx*=-1;
+    if(o.y<0||o.y>c.height)o.vy*=-1;
+    x.beginPath();x.arc(o.x,o.y,o.r,0,6.28);x.fill();}
   requestAnimationFrame(anim);
-})();
-
-const $=s=>document.querySelector(s);
-const list=$("#list"),msg=$("#msg"),tokenInput=$("#token");
-
-function row(v=""){
-  const d=document.createElement("div");d.className="item";
-  const i=document.createElement("input");i.type="text";i.placeholder="https://wa.me/...";i.value=v;
-  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";
-  b.onclick=()=>d.remove();
-  d.append(i,b);list.append(d);
-  setTimeout(()=>{ i.scrollIntoView({behavior:"smooth", block:"end"}); i.focus(); }, 50);
 }
+anim();
+
+// === lógica panel ===
+const $=s=>document.querySelector(s);
+const list=$("#list"),msg=$("#msg");
+const tokenInput=$("#token");
+
+function row(v=""){const d=document.createElement("div");d.className="item";
+const i=document.createElement("input");i.value=v;i.placeholder="https://wa.me/...";const b=document.createElement("button");b.textContent="Borrar";b.onclick=()=>d.remove();
+d.append(i,b);list.append(d);}
 
 function values(){return[...list.querySelectorAll("input")].map(i=>i.value.trim()).filter(Boolean)}
-function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
+function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err";}
 
-$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
+$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado ✅")};
+window.onload=()=>{const t=localStorage.getItem("adm_tok");if(t)tokenInput.value=t;}
 
-window.onload=async()=>{
-  const t=localStorage.getItem("adm_tok");
-  if(t){ tokenInput.value=t; await loadList(t); }
+// Ver lista
+$("#btnView").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  show("Cargando...");
+  const r=await fetch(`/api/admin?token=${t}&get=1`);
+  const j=await r.json();
+  list.innerHTML="";
+  (j.links||[]).forEach(v=>row(v));
+  if((j.links||[]).length==0)row("");
+  show("Lista cargada ✅");
 };
 
-async function loadList(t){
-  try{
-    show("Cargando...");
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();
-    list.innerHTML="";
-    (j.links||[]).forEach(v=>row(v));
-    if((j.links||[]).length===0)row("");
-    show("Lista cargada");
-  }catch(e){ show("Error al cargar",0); }
-}
+// Borrar lista
+$("#btnReset").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const r=await fetch(`/api/admin?token=${t}&reset=1`);
+  const j=await r.json();
+  list.innerHTML="";row("");
+  show(j.ok?"Lista borrada ✅":"Error",j.ok);
+};
 
+// Reset rotación
+$("#btnRot").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const r=await fetch(`/api/rotate-reset?token=${t}`);
+  const j=await r.json();
+  show(j.ok?"Rotación reiniciada ✅":"Error al resetear",j.ok);
+};
+
+// Agregar cajera
 $("#btnAdd").onclick=()=>row("");
 
-$("#btnUpdate").onclick=async()=>{
-  const t=tokenInput.value.trim();
-  if(!t)return show("Poné token",0);
-  const vals=values();
-  if(!vals.length)return show("Nada que guardar",0);
-  try{
-    show("Guardando...");
-    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
-      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
-    });
-    const j=await r.json();
-    if(j.ok){ show(`Guardado (${j.saved})`); await loadList(t); }
-    else show("Error al guardar",0);
-  }catch(e){ show("Error al guardar",0); }
-};
-
-$("#btnReset").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
-    const j=await r.json();
-    list.innerHTML=""; row("");
-    show(j.ok?"Lista borrada":"Error",j.ok);
-  }catch(e){ show("Error",0); }
-};
-
-$("#btnRot").onclick=async()=>{
-  const t=tokenInput.value.trim(); if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
-    const j=await r.json();
-    show(j.ok?"Rotación reiniciada":"Error",j.ok);
-  }catch(e){ show("Error",0); }
+// Guardar lista
+$("#btnSave").onclick=async()=>{
+  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
+  const vals=values();if(!vals.length)return show("Nada para guardar",0);
+  show("Guardando...");
+  const r=await fetch(`/api/admin-post?token=${t}`,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify(vals)
+  });
+  const j=await r.json();
+  show(j.ok?`Guardado correctamente (${j.saved}) ✅`:`Error al guardar ❌`,j.ok);
 };
 </script>
 </body>
