--- a/public/admin.html
+++ b/public/admin.html
@@ -25,6 +25,25 @@
   .card-inner{padding:16px 14px}
   .mini-inner{padding:14px 14px}
 
+  /* === CTA "Estadísticas" con estilo de tarjeta === */
+  .cta-card{
+    width:100%;
+    margin:14px auto;
+    border-radius:20px;
+    background:
+      linear-gradient(#3b1a6af0,#3b1a6af0) padding-box,
+      linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
+    border:1px solid transparent;
+    box-shadow:0 12px 40px rgba(0,0,0,.45), 0 8px 26px rgba(100,50,180,.28);
+    display:flex;align-items:center;justify-content:center;gap:12px;
+    padding:16px 18px;
+    font-size:18px;font-weight:700;color:#fff;
+    cursor:pointer;
+    transition:transform .15s ease, filter .15s ease;
+  }
+  .cta-card:hover{transform:translateY(-1px);filter:brightness(1.05)}
+  .cta-card svg{width:22px;height:22px;flex:0 0 22px;filter:drop-shadow(0 0 8px rgba(185,133,255,.35))}
+
   h1{margin:2px 0 8px;text-align:center;font-size:24px;letter-spacing:.4px}
   p,small{color:var(--muted);text-align:center;margin:0}
 
@@ -75,7 +94,12 @@
   #btnSaveFinal{ min-width:180px; }
 
   .card-mini{margin-top:16px}
+  .mini-inner{padding:14px 14px}
   .mini-title{margin:0 0 8px;text-align:center;font-size:14px;color:#dcd2ff}
+
+  /* Placeholder de la sección Estadísticas */
+  #stats{margin:14px auto 0; padding:6px 2px; max-width:760px}
+  #stats .hint{color:#b9acee;font-size:13px;text-align:center;margin-top:8px}
 
   @media (max-width:420px){
     .logo{width:216px;margin:8px auto -38px}
@@ -118,6 +142,16 @@
     </div>
   </div>
 
+  <!-- 🔹 Botón tipo tarjeta: ESTADÍSTICAS -->
+  <button class="cta-card" id="btnStats" aria-label="Ir a Estadísticas">
+    <!-- Ícono simple (pie chart) -->
+    <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
+      <path d="M11 3a1 1 0 0 1 1-1 10 10 0 1 1-10 10 1 1 0 0 1 2 0 8 8 0 1 0 8-8 1 1 0 0 1-1-1Z" fill="#fff"/>
+      <path d="M12 2a1 1 0 0 1 1 1v8h8a1 1 0 0 1 1 1 10 10 0 0 1-10 10 1 1 0 0 1-1-1V3a1 1 0 0 1 1-1Z" fill="#ffffff" opacity=".7"/>
+    </svg>
+    <span>Estadísticas</span>
+  </button>
+
   <!-- Tarjeta mini inferior: BLOCK_SIZE + TOKEN -->
   <div class="card-mini">
     <div class="mini-inner">
@@ -138,6 +172,11 @@
       </div>
     </div>
   </div>
+
+  <!-- Placeholder de la futura sección de estadísticas -->
+  <section id="stats">
+    <p class="hint">Aquí vamos a renderizar el módulo de <strong>Estadísticas</strong> (tabla y filtros).</p>
+  </section>
 </div>
 
 <script>
@@ -253,6 +292,12 @@ $("#btnSaveBS").onclick=async()=>{
     const j=await r.json();
     show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
   }catch(e){ show("Error al guardar",0); }
+};
+
+// Scroll suave hacia la sección Estadísticas
+document.getElementById('btnStats').onclick = () => {
+  const target = document.getElementById('stats');
+  if (target) target.scrollIntoView({behavior:'smooth', block:'start'});
 };
 </script>
 </body>
